--- a/src/main/web/WEB-INF/web.xml
+++ b/src/main/web/WEB-INF/web.xml
@@ -32,16 +32,16 @@
     </filter-mapping>
 
     <!-- 静态资源分发 -->
-    <!--<servlet-mapping>-->
-        <!--<servlet-name>default</servlet-name>-->
-        <!--<url-pattern>*.html</url-pattern>-->
-        <!--<url-pattern>*.js</url-pattern>-->
-        <!--<url-pattern>*.css</url-pattern>-->
-        <!--<url-pattern>*.ico</url-pattern>-->
-        <!--<url-pattern>*.cab</url-pattern>-->
-        <!--<url-pattern>*.png</url-pattern>-->
-        <!--<url-pattern>*.jpg</url-pattern>-->
-    <!--</servlet-mapping>-->
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.html</url-pattern>
+        <url-pattern>*.js</url-pattern>
+        <url-pattern>*.css</url-pattern>
+        <url-pattern>*.ico</url-pattern>
+        <url-pattern>*.cab</url-pattern>
+        <url-pattern>*.png</url-pattern>
+        <url-pattern>*.jpg</url-pattern>
+    </servlet-mapping>
 
     <filter>
         <filter-name>DruidWebStatFilter</filter-name>
