--- a/src/main/resources/spring/config.properties
+++ b/src/main/resources/spring/config.properties
@@ -1,4 +1,4 @@
-sms_sign=Million
+sms_sign=\u4E2D\u56FD\u767E\u4E07\u8840\u7BA1\u5065\u5EB7\u8BA1\u5212
 sms_loginid=bjanyx_v2
 sms_loginpwd=123456
 host_1=http://chinamillionclub.hongshouhuan.com
